# nvidia-deepstream-rs

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
gst-nvdspreprocess-sys/: Cargo.toml  README.org  build.rs  wrapper.h
gst-nvdspreprocess-sys/src/: lib.rs
nvds/: Cargo.toml  build.rs
nvds-sys/: build.rs
nvds/src/: bounding_box.rs  infer.rs  lib.rs  meta.rs  obj_encode.rs  surface.rs  surface_transform.rs
nvds/src/gst/: mod.rs  preprocess.rs
nvds/src/meta/: audio.rs  latency.rs  optical_flow.rs  osd.rs  schema.rs  tracker.rs
